[tool.poetry]
name = "SergeiEvsujkov_brain_games"
version = "0.0.1"
description = ""
authors = ["sergei <evsujkov@yandex.ru>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
