[tool.poetry]
name = "SergeiEvsujkov_brain_games"
version = "0.2.0"
description = ""
authors = ["sergei <evsujkov@yandex.ru>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.5"
prompt = "^0.4.1"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[[tool.poetry.source]]
name =  "mydist" 
url =  "https://test.pypi.org/legacy/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

